--- a/grant/index.html
+++ b/grant/index.html
@@ -12,7 +12,7 @@
         var temp=parseFloat(prompt("Enter temperature in degrees celsius: "));
         document.getElementById("temp").innerHTML=temp + " degrees celsius.";
         var temp2=(9/5*temp)+32;
-        document.getElementById("tempconvert"). innerHTML=temp2 + " degrees kelvin.";
+        document.getElementById("tempconvert"). innerHTML=temp2 + " degrees fahrenheit.";
 
 
     </script>
